@@ -2,6 +2,7 @@ package com.cannontech.dr.pxmw.model;
 
 import java.util.List;
 import java.util.Map;
+import com.google.common.collect.ImmutableMap;
 
 import org.apache.logging.log4j.core.Logger;
 import org.springframework.http.HttpStatus;
@@ -18,22 +19,22 @@ public enum PxMWRetrievalUrl {
             //used by simulator
             "https://adopteriotwebapi.eaton.com/swagger/ui/index#!/Security/Security_GetSecurityToken",
             List.of(HttpStatus.OK, HttpStatus.UNAUTHORIZED, HttpStatus.FORBIDDEN),
-            Map.of()),
+            ImmutableMap.of()),
     DEVICE_PROFILE_BY_GUID_V1(PxMWVersion.V1, "/api/v1/deviceprofile/{id}",
             //used by simulator
             "http://wordpress-prod.tcc.etn.com/wordpress/wp-content/docs/RestApi/IoT.html#device-profile",
             List.of(HttpStatus.OK),
-            Map.of("Profile Guid", "08bc1c6f-f4fd-43c5-8797-cba3a7b5d625")),
+            ImmutableMap.of("Profile Guid", "08bc1c6f-f4fd-43c5-8797-cba3a7b5d625")),
     DEVICES_BY_SITE_V1(PxMWVersion.V1, "/api/v1/sites/{id}/devices",
             //used by simulator
             "http://wordpress-prod.tcc.etn.com/wordpress/wp-content/docs/RestApi/IoT.html#site-site-get-1",
             List.of(HttpStatus.OK, HttpStatus.NOT_FOUND),
-            Map.of("Site Guid", "dd5bf079-b8ea-430c-ad94-1cf54124fc02", "Recursive* (true, false)", "false", "Include Detail* (true, false)", "false")),
+            ImmutableMap.of("Site Guid", "dd5bf079-b8ea-430c-ad94-1cf54124fc02", "Recursive* (true, false)", "false", "Include Detail* (true, false)", "false")),
     DEVICE_CHANNEL_DETAILS_V1(PxMWVersion.V1, "/api/v1/device/{deviceId}/channels",
             //used by simulator
             "https://was-all-apim-eus-dev.portal.azure-api.net/docs/services/device-management-function-app/operations/get-getdevicechanneldetails-1?",
             List.of(HttpStatus.OK, HttpStatus.BAD_REQUEST, HttpStatus.UNAUTHORIZED, HttpStatus.NOT_FOUND, HttpStatus.FORBIDDEN),
-            Map.of("Device Guid", "3b4dd0db-2144-4fb2-a819-99f7f0a4d5cf"));
+            ImmutableMap.of("Device Guid", "3b4dd0db-2144-4fb2-a819-99f7f0a4d5cf"));
 
     private PxMWVersion version;
     private String suffix;
